--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:text="@string/btn_call_phone"/>
     <Button
-        android:id="@+id/btn_hompage"
+        android:id="@+id/btn_homepage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/btn_homepage"/>
